--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
-body {
-  background-color: #a3d5d3;
+html {
+  width: 100%;
+  height: 100%;
+
+  text-align: center;
+  font-size: 16px;
+  color:#fff;
+
+  background-color: #000000;
+  margin: 0px;
+  overflow: hidden;
+   background-image: radial-gradient(ellipse farthest-corner at center top, #23233f 0%, #000000 60%);
+}
+  /*background: #11e8bb;
+  background: -moz-linear-gradient(top,  #11e8bb 0%, #8200c9 100%);
+  background: -webkit-linear-gradient(top,  #11e8bb 0%,#8200c9 100%);
+  background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11e8bb', endColorstr='#8200c9',GradientType=0 ); /* IE6-9
 }
