--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,11 @@ html {
   overflow: hidden;
    background-image: radial-gradient(ellipse farthest-corner at center top, #23233f 0%, #000000 60%);
 }
+
+
   /*background: #11e8bb;
   background: -moz-linear-gradient(top,  #11e8bb 0%, #8200c9 100%);
   background: -webkit-linear-gradient(top,  #11e8bb 0%,#8200c9 100%);
   background: linear-gradient(to bottom,  #11e8bb 0%,#8200c9 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#11e8bb', endColorstr='#8200c9',GradientType=0 ); /* IE6-9
-}
+}*/
